--- a/src/components/Transaction/Transaction.module.css
+++ b/src/components/Transaction/Transaction.module.css
@@ -21,7 +21,7 @@
 }
 
 .upperDetail {
-	background-image: url(./detalhe-sup.svg);
+	background-image: url(./upper-detail.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 200px;
@@ -33,7 +33,7 @@
 }
 
 .lowerDetail {
-	background-image: url(./detalhe-inf.svg);
+	background-image: url(./lower-detail.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 200px;
